[package]
name = "rs-pug"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossterm = "0.27"
lofty = "0.21"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "net", "io-util"] }
toml = "0.8"
walkdir = "2.5"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3"
